
  - OpenXML filter: New option to translate slide masters in PowerPoint documents

  - French localisation updated to 2.0 (UI)

----------------------------------------------------------------------
 OmegaT 1.8.1 update 3 Changes
----------------------------------------------------------------------
1.8.1 update 3 vs. 1.8.1 update 2

   3 Enhancements
   1 Bugfix
----------------------------------------------------------------------
1.8.1 update 3
 
  Implemented requests:

  - Add keyboard shortcuts in Search dialog
  http://sourceforge.net/support/tracker.php?aid=1811065
  (Effective in English and in French, other translations must be 
   updated. As for all dialogs, dialog shortcuts are not available on a Mac.)

  Other enhancements:

  - New Welsh localisation (UI, readme, instant start)
  - czech localisation updated to 1.8 (UI, readme, instant start, documentation)

  Bug fixes:

  - Tags are counted as characters in statistics
  http://sourceforge.net/support/tracker.php?aid=1910909 

----------------------------------------------------------------------
 OmegaT 1.8.1 update 2 Changes
----------------------------------------------------------------------
1.8.1 update 2 vs. 1.8.1 update 1

   2 Enhancements
   3 Bugfixes
----------------------------------------------------------------------
1.8.1 update 2

  Other enhancements:

  Windows: Various corrections and enhancements to OmegaT.exe (the OmegaT 
launcher), based on version 3.0.1 of Launch4J.

  - Slovenian localisation updated to 1.8 (readme, instant start, documentation)
  
  Bug fixes:
  
  - PL "Create new project" too large on OSX
  http://sourceforge.net/support/tracker.php?aid=1895406

  - The content of external TMX level 2 tags is displayed
  http://sourceforge.net/support/tracker.php?aid=1988491 

  - Spellcheck: words added to dictionary lost after restart
  http://sourceforge.net/support/tracker.php?aid=1819355  

----------------------------------------------------------------------